brush-parser/src/snapshots/brush_parser__tokenizer__tests__tokenize_here_doc_line_with_nested_constructs_in_a_later_redirect.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(r#\"cat <<EOF > \"${base}.c\"\nbody\nEOF\n\"#)?"
---
TokenizerResult(
  input: "cat <<EOF > \"${base}.c\"\nbody\nEOF\n",
  result: [
    Word("cat", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 3,
        line: 1,
        column: 4,
      ),
    )),
    Operator("<<", SourceSpan(
      start: SourcePosition(
        index: 4,
        line: 1,
        column: 5,
      ),
      end: SourcePosition(
        index: 6,
        line: 1,
        column: 7,
      ),
    )),
    Word("EOF", SourceSpan(
      start: SourcePosition(
        index: 6,
        line: 1,
        column: 7,
      ),
      end: SourcePosition(
        index: 9,
        line: 1,
        column: 10,
      ),
    )),
    Word("body\n", SourceSpan(
      start: SourcePosition(
        index: 24,
        line: 2,
        column: 1,
      ),
      end: SourcePosition(
        index: 33,
        line: 4,
        column: 1,
      ),
    )),
    Word("EOF", SourceSpan(
      start: SourcePosition(
        index: 33,
        line: 4,
        column: 1,
      ),
      end: SourcePosition(
        index: 33,
        line: 4,
        column: 1,
      ),
    )),
    Operator(">", SourceSpan(
      start: SourcePosition(
        index: 9,
        line: 1,
        column: 10,
      ),
      end: SourcePosition(
        index: 11,
        line: 1,
        column: 12,
      ),
    )),
    Word("\"${base}.c\"", SourceSpan(
      start: SourcePosition(
        index: 12,
        line: 1,
        column: 13,
      ),
      end: SourcePosition(
        index: 23,
        line: 1,
        column: 24,
      ),
    )),
    Operator("\n", SourceSpan(
      start: SourcePosition(
        index: 23,
        line: 1,
        column: 24,
      ),
      end: SourcePosition(
        index: 24,
        line: 2,
        column: 1,
      ),
    )),
  ],
)
