brush-parser/src/snapshots/brush_parser__tokenizer__tests__tokenize_here_tag_that_is_a_braced_parameter_expansion.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(r\"cat <<${VAR}\nbody\n${VAR}\n\")?"
---
TokenizerResult(
  input: "cat <<${VAR}\nbody\n${VAR}\n",
  result: [
    Word("cat", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 3,
        line: 1,
        column: 4,
      ),
    )),
    Operator("<<", SourceSpan(
      start: SourcePosition(
        index: 4,
        line: 1,
        column: 5,
      ),
      end: SourcePosition(
        index: 6,
        line: 1,
        column: 7,
      ),
    )),
    Word("${VAR}", SourceSpan(
      start: SourcePosition(
        index: 6,
        line: 1,
        column: 7,
      ),
      end: SourcePosition(
        index: 12,
        line: 1,
        column: 13,
      ),
    )),
    Word("body\n", SourceSpan(
      start: SourcePosition(
        index: 13,
        line: 2,
        column: 1,
      ),
      end: SourcePosition(
        index: 25,
        line: 4,
        column: 1,
      ),
    )),
    Word("${VAR}", SourceSpan(
      start: SourcePosition(
        index: 25,
        line: 4,
        column: 1,
      ),
      end: SourcePosition(
        index: 25,
        line: 4,
        column: 1,
      ),
    )),
    Operator("\n", SourceSpan(
      start: SourcePosition(
        index: 12,
        line: 1,
        column: 13,
      ),
      end: SourcePosition(
        index: 13,
        line: 2,
        column: 1,
      ),
    )),
  ],
)
